# discord-token-botter-rs

./: Cargo.toml  README.md  config.json
input/: usernames.txt
output/: tokens.txt
src/: headers.rs  main.rs  request_structs.rs  structs.rs  utils.rs
