[package]
name = "discord_token_botter_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0.0"
rand = "0.8.5"
